cupt (0.2.1) UNRELEASED; urgency=low

  * cupt:
    - New 'screenshots' subcommand.
    - New 'clean' subcommand.
    - New 'autoclean' subcommand.
    - Implemented the option '--quiet'.
  * Cupt:
    - System:
      - Worker:
        - New 'clean_archives' method.
      - Resolvers/Native:
        - Fixed dropping solutions by normalized score, not by the original one.
        - Fixed auto-removing of packages which resolver marked to change, but
          in the end they became unneeded anyway.
    - Cache:
      - BinaryVersion:
        - Always set 'source_version_string' field.
    - Config:
      - Added configuration option 'quiet'.
    - Download:
      - Progresses/Console:
        - Don't output progress meter when standard output is not a TTY.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 01 Jun 2009 12:53:26 +0300

cupt (0.2.0) unstable; urgency=low

  * cupt:
    - New 'update' subcommand.
  * doc/cupt.1.pod:
    - Mentioned how to set list configuration option.
  * doc/cupt_howto.7.pod:
    - Added.
  * Cupt:
    - System:
      - Resolver*:
        - Merged an infrastructure to allow multiple resolvers to co-exist in
          future.
      - Worker:
        - [API break] 'do_actions' renamed to 'change_system'.
        - New method 'update_release_and_index_data'.
        - Honor 'dpkg::options' option.
    - Download:
      - Manager:
        - Worker thread: handle duplicated download requests that come when
          the original download request is not yet completed. This use case is
          possible 'update' action.
        - Worker thread: handle concurrent request of the same URI properly.
        - Worker thread: pass correct URI to download progress in case of
          ACKed download.
        - 'download' method: switched to modern interface of File::Temp,
          getting rid of compatibility one.
        - 'download' method: use POSIX::mkfifo instead of calling 'mkfifo'
          program.